# blogposts

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  nginx.conf
frontend/: index.html  script.js  style.css
migrations/2024-11-02-144516_create_blogpost/: down.sql  up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
