[package]
name = "blogposts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.41.0", features = ["full"]}
axum = "0.7.7"
serde = {version = "1.0.214", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
diesel = "2.2.4"
diesel-async = { version = "0.5.1", features = ["postgres", "bb8"] }
